--- a/app/src/main/res/layout/activity_firstmeat.xml
+++ b/app/src/main/res/layout/activity_firstmeat.xml
@@ -33,7 +33,7 @@
             android:id="@+id/btnGo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#6200EE"
+            android:backgroundTint="@color/colorPrimary"
             android:text="Go to Destination"
             android:textColor="@android:color/white" />
 
