--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingVertical="@dimen/margin_padding_size_large"
-                    android:text="LOGIN"
+                    android:text="@string/login"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold"
@@ -75,7 +75,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/margin_padding_size_small"
-                        android:hint="Email"
+                        android:hint="@string/email"
                         android:inputType="textEmailAddress" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -97,7 +97,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/margin_padding_size_small"
-                        android:hint="Password"
+                        android:hint="@string/password"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword" />
 
@@ -121,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:layout_weight="1"
-                        android:text="Buyer"
+                        android:text="@string/buyer"
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
-                        android:text="Seller"
+                        android:text="@string/seller"
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
@@ -151,7 +151,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin_padding_size_xxxlarge"
                     android:layout_marginTop="@dimen/margin_padding_size_xxlarge"
-                    android:text="Sign in"
+                    android:text="@string/sign_in"
                     android:paddingVertical="@dimen/margin_padding_size_small"
                     android:visibility="@{viewModel.isLoading ? View.INVISIBLE : View.VISIBLE}"
                     android:textAllCaps="true"
@@ -176,7 +176,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_padding_size_large"
-                    android:text="Don't have an account?"
+                    android:text="@string/dont_have_an_account"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +190,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/margin_padding_size_micro"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="Register Here"
+                    android:text="@string/register_here"
                     android:textColor="@color/colorPrimaryLightGreen"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
