--- a/app/src/main/res/layout/activity_seller_main.xml
+++ b/app/src/main/res/layout/activity_seller_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.buyer.BuyerMainActivity">
+        tools:context=".screens.seller.SellerMainActivity">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/frame_layout"
@@ -26,17 +26,16 @@
             app:navGraph="@navigation/navigation_seller" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            style="@style/BottomNav.Style"
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
-            app:itemTextAppearanceActive="@style/BottomNavTextAppearanceActive"
-            app:itemRippleColor="@color/white"
-            app:itemTextColor="@color/white"
-            app:itemIconTint="@color/white"
-            android:layout_marginHorizontal="@dimen/margin_padding_size_xxxlarge"
-            android:layout_marginBottom="@dimen/margin_padding_size_xlarge"
+            android:layout_height="72dp"
+            android:layout_marginHorizontal="@dimen/margin_padding_size_small"
+            android:layout_marginBottom="@dimen/margin_padding_size_micro"
             android:background="@drawable/bg_green_rounded"
+            app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
+            app:itemRippleColor="@color/white"
+            app:itemTextAppearanceActive="@style/BottomNavTextAppearanceActive"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
