--- a/app/src/main/res/navigation/navigation_buyer.xml
+++ b/app/src/main/res/navigation/navigation_buyer.xml
@@ -8,17 +8,17 @@
     <fragment
         android:id="@+id/main"
         android:name="com.pampang.nav.screens.buyer.BuyerMainFragment"
-        android:label="fragment_main"
+        android:label="@string/fragment_main"
         tools:layout="@layout/fragment_main"/>
     <fragment
         android:id="@+id/messages"
         android:name="com.pampang.nav.screens.GroupChatFragment"
-        android:label="fragment_group_chat"
+        android:label="@string/fragment_group_chat"
         tools:layout="@layout/fragment_group_chat" />
     <fragment
         android:id="@+id/profile"
         android:name="com.pampang.nav.screens.buyer.BuyerProfileFragment"
-        android:label="fragment_profile"
+        android:label="@string/fragment_profile"
         tools:layout="@layout/fragment_profile" />
 
 </navigation>
