--- a/app/src/main/res/layout/activity_map_activty2.xml
+++ b/app/src/main/res/layout/activity_map_activty2.xml
@@ -35,8 +35,8 @@
             android:id="@+id/btnGo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#6200EE"
-            android:text="@string/go_to_destination"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Go to Destination"
             android:textColor="@android:color/white" />
 
         <!-- 🧹 Clear Button -->
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:backgroundTint="#B00020"
-            android:text="@string/clear_path"
+            android:text="Clear Path"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
