--- a/app/src/main/res/layout/fragment_group_chat.xml
+++ b/app/src/main/res/layout/fragment_group_chat.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/baseline_arrow_back_24"
-            app:title="Group Chat" />
+            app:title="@string/fragment_group_chat" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_chat"
