--- a/app/src/main/res/menu/menu_seller_navigation.xml
+++ b/app/src/main/res/menu/menu_seller_navigation.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/list"
         android:icon="@drawable/ic_list"
-        android:title="List" />
+        android:title="@string/bottom_nav_list" />
     <item
         android:id="@+id/messages"
         android:icon="@android:drawable/ic_dialog_email"
-        android:title="Messages" />
+        android:title="@string/bottom_nav_messages" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_person"
-        android:title="Profile" />
+        android:title="@string/fragment_profile" />
 </menu>
