--- a/app/src/main/res/layout/activity_first_fish_store.xml
+++ b/app/src/main/res/layout/activity_first_fish_store.xml
@@ -17,6 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/store_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/store_name" />
+
     <TextView
         android:id="@+id/open_time_label"
         android:layout_width="wrap_content"
@@ -26,7 +36,7 @@
         android:text="@string/open_time_label"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/store_name" />
+        app:layout_constraintTop_toBottomOf="@+id/store_image" />
 
     <TextView
         android:id="@+id/open_time_value"
