--- a/app/src/main/res/layout/activity_second_meat_store.xml
+++ b/app/src/main/res/layout/activity_second_meat_store.xml
@@ -19,10 +19,10 @@
 
     <ImageView
         android:id="@+id/store_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="250dp"
         android:layout_marginTop="16dp"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/store_name" />
