--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -19,7 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginVertical="6dp"
-        android:onClick="@{() -> onClickCallBack.onClick(model)}"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp">
 
@@ -35,7 +34,7 @@
                 android:text="@{model.storeName}"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_edit"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Store Name" />
@@ -76,11 +75,21 @@
                 android:id="@+id/closing_time_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android.layout_marginStart="8dp"
                 android:text="@{model.closingTime}"
                 android:textAppearance="?attr/textAppearanceBody2"
                 app:layout_constraintBaseline_toBaselineOf="@+id/closing_time_label"
                 app:layout_constraintStart_toEndOf="@+id/closing_time_label" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_edit"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:onClick="@{() -> onClickCallBack.onClick(model)}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
